--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,8 @@ DB_CONNECTION=sqlite
 #DB_USERNAME=root
 #DB_PASSWORD=
 
-BROADCAST_DRIVER=log
+#Las credenciales se obtienen desde Pusher
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
